Obteniendo por geolocalizacion las coordenadas del dispositivo y mostrando la información en una alerta

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
       "browser",
       "android"
     ],
-    "plugins": {}
+    "plugins": {
+      "cordova-plugin-geolocation": {}
+    }
   },
   "dependencies": {
     "onsenui": "^2.12.8"
