--- a/package.json
+++ b/package.json
@@ -14,14 +14,23 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^12.0.1",
-    "cordova-browser": "^7.0.0"
+    "cordova-browser": "^7.0.0",
+    "cordova-plugin-device": "^2.1.0",
+    "cordova-plugin-geolocation": "github:apache/cordova-plugin-geolocation",
+    "cordova-plugin-globalization": "^1.11.0"
   },
   "cordova": {
     "platforms": [
       "browser",
       "android"
     ],
-    "plugins": {}
+    "plugins": {
+      "cordova-plugin-globalization": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-geolocation": {
+        "GPS_REQUIRED": "true"
+      }
+    }
   },
   "dependencies": {
     "onsenui": "^2.12.8"
