--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "devDependencies": {
-    "cordova-android": "^12.0.1",
+    "cordova-android": "^13.0.0",
     "cordova-browser": "^7.0.0",
+    "cordova-custom-config": "^5.1.1",
     "cordova-plugin-device": "^2.1.0",
-    "cordova-plugin-geolocation": "github:apache/cordova-plugin-geolocation",
-    "cordova-plugin-globalization": "^1.11.0"
+    "cordova-plugin-geolocation": "github:apache/cordova-plugin-geolocation"
   },
   "cordova": {
     "platforms": [
@@ -25,11 +25,11 @@
       "android"
     ],
     "plugins": {
-      "cordova-plugin-globalization": {},
       "cordova-plugin-device": {},
       "cordova-plugin-geolocation": {
         "GPS_REQUIRED": "true"
-      }
+      },
+      "cordova-custom-config": {}
     }
   },
   "dependencies": {
